k8s-manifests/applications/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-worker-1
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        ports:
        - containerPort: 32400
          name: plex
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 5353
          name: discovery-udp
          protocol: UDP
        - containerPort: 8324
          name: roku-tcp
        - containerPort: 32410
          name: gdm-1-udp
          protocol: UDP
        - containerPort: 32412
          name: gdm-2-udp
          protocol: UDP
        - containerPort: 32413
          name: gdm-3-udp
          protocol: UDP
        - containerPort: 32414
          name: gdm-4-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
        - name: transcode
          mountPath: /transcode
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "6Gi"
            cpu: "3000m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: media
        persistentVolumeClaim:
          claimName: media-storage
      - name: transcode
        emptyDir: {}
