k8s-manifests/applications/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: NodePort
  selector:
    app: plex
  ports:
  - name: plex
    port: 32400
    targetPort: 32400
    nodePort: 32400
  - name: dlna-udp
    port: 1900
    targetPort: 1900
    protocol: UDP
  - name: discovery-udp
    port: 5353
    targetPort: 5353
    protocol: UDP
